<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zm.mytestapplication.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintLeft_toRightOf="@+id/editText"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:fontFamily="casual"
        android:text="@string/hello_world"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/button_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkPermission"
        android:text="@string/grant_permission"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/button_link_reader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="linkReader"
        android:text="@string/button_link_reader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_take_picture" />

    <Button
        android:id="@+id/button_take_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="takePicture"
        android:text="@string/button_take_picture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_take_video"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_permission" />

    <Button
        android:id="@+id/button_take_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="takeVideo"
        android:text="@string/button_take_video"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_take_picture"
        app:layout_constraintLeft_toRightOf="@+id/button_take_picture"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
